[package]
name = "pgc"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.5", default-features = false }

embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f302k8", "unstable-pac", "memory-x", "time-driver-tim2", "exti"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
static_cell = "2"


[profile.dev]
opt-level = 0  # Disable optimizations during development for better debugging
debug = true

[profile.release]
lto = "thin"
opt-level = "z"
